fix: [CDNG-9368]: fixed the alignment of location column under sideca… (#3676)
* fix: [CDNG-9368]: fixed the alignment of location column under sidecar artifacts

* fix: updated snapshot

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
@@ -26,6 +26,11 @@
       cursor: pointer;
     }
   }
+
+  .locationField {
+    display: flex;
+    align-items: center;
+  }
   .connectorNameField {
     display: flex;
     align-items: center;
